[gd_scene load_steps=8 format=2]

[ext_resource path="res://Blocker/texture/blocker_animation_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Blocker/Blocker.gd" type="Script" id=2]
[ext_resource path="res://Blocker/target_detector.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 12 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 12.9997 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.258824, 0.258824, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Blocker" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="player_projectile_detector" type="Area2D" parent="."]
position = Vector2( 0, -12 )
rotation = 3.14159
gravity = 0.0
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_projectile_detector"]
position = Vector2( 25, 6.29425e-05 )
shape = SubResource( 2 )

[node name="target_detector" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, -12 )

[node name="Visual" type="Node2D" parent="."]

[node name="HealthBar" type="ProgressBar" parent="Visual"]
margin_left = -6.0
margin_top = -32.0
margin_right = 19.0
margin_bottom = -26.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="player_projectile_detector" to="." method="_on_player_projectile_body_entered"]
[connection signal="body_exited" from="player_projectile_detector" to="." method="_on_player_projectile_body_exited"]
[connection signal="target_detected_in_area" from="target_detector" to="." method="_on_target_detected_in_area"]
[connection signal="target_not_in_area" from="target_detector" to="." method="_on_target_detector_target_not_in_area"]
